--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
       </nav>
     <div class="container">
-        <form method="POST" action="result.php">
+        <form method="POST" action="result.html">
         <div class="row">
           <div class="col-25">
             
