--- a/index.html
+++ b/index.html
@@ -6,58 +6,92 @@
     <title>حساب أسعار المنتجات بالعملة المحلية</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            font-family: 'Arial', sans-serif;
+            background-color: #f9f9f9;
             margin: 0;
-            background-color: #f4f4f4;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .container {
-            width: 600px;
             padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            direction: rtl;
         }
-
-        .exchange-rate {
-            margin-bottom: 15px;
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
-
-        label {
-            display: block;
-            margin-bottom: 5px;
+        h1, h2 {
+            text-align: center;
+            color: #333;
         }
-
-        input[type="number"] {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
         }
-
-        th, td {
+        table, th, td {
             border: 1px solid #ddd;
-            padding: 8px;
+        }
+        th, td {
+            padding: 10px;
             text-align: center;
         }
-
         th {
-            background-color: #f2f2f2;
+            background-color: #f1f1f1;
+        }
+        input[type="number"] {
+            padding: 5px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .add-btn, #clearCart, #copyCart, #copyProducts {
+            padding: 6px 12px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 10px;
+            margin-right: 5px;
+        }
+        .add-btn:hover, #clearCart:hover, #copyCart:hover, #copyProducts:hover {
+            background-color: #45a049;
+        }
+        #total {
+            font-weight: bold;
+            font-size: 1.2em;
+            color: #e91e63;
+        }
+        @media (max-width: 600px) {
+            table, thead, tbody, th, td, tr {
+                display: block;
+                width: 100%;
+            }
+            thead tr {
+                display: none;
+            }
+            td {
+                padding: 10px;
+                text-align: right;
+                position: relative;
+                padding-right: 50%;
+                border: none;
+                border-bottom: 1px solid #ddd;
+            }
+            td::before {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                width: 45%;
+                white-space: nowrap;
+                font-weight: bold;
+            }
+            #products td:nth-of-type(1)::before { content: "المنتج"; }
+            #products td:nth-of-type(2)::before { content: "السعر بالدولار"; }
+            #products td:nth-of-type(3)::before { content: "السعر بالعملة المحلية"; }
+            #products td:nth-of-type(4)::before { content: "إجراء"; }
+            #cart td:nth-of-type(1)::before { content: "المنتج"; }
+            #cart td:nth-of-type(2)::before { content: "السعر بالعملة المحلية"; }
         }
     </style>
 </head>
@@ -67,79 +101,144 @@
 
         <div class="exchange-rate">
             <label for="usdRate">سعر صرف الدولار (مقابل العملة المحلية):</label>
-            <input type="number" id="usdRate" value="30.5" min="0">
+            <input type="number" id="usdRate" value="2600" min="0">
         </div>
 
         <table id="products">
             <thead>
                 <tr>
-                    <th>المنتج (UC)</th>
+                    <th>المنتج</th>
                     <th>السعر بالدولار</th>
                     <th>السعر بالعملة المحلية</th>
+                    <th>إجراء</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>60 UC</td>
-                    <td class="usd-price">0.86</td>
-                    <td class="local-price">0.00</td>
+                    <td>110 جوهرة</td>
+                    <td class="usd-price">0.905</td>
+                    <td class="local-price">0</td>
+                    <td><button class="add-btn">إضافة</button></td>
                 </tr>
                 <tr>
-                    <td>325 UC</td>
-                    <td class="usd-price">4.3</td>
-                    <td class="local-price">0.00</td>
+                    <td>231 جوهرة</td>
+                    <td class="usd-price">1.81</td>
+                    <td class="local-price">0</td>
+                    <td><button class="add-btn">إضافة</button></td>
                 </tr>
                 <tr>
-                    <td>660 UC</td>
-                    <td class="usd-price">8.6</td>
-                    <td class="local-price">0.00</td>
+                    <td>583 جوهرة</td>
+                    <td class="usd-price">4.525</td>
+                    <td class="local-price">0</td>
+                    <td><button class="add-btn">إضافة</button></td>
+                </tr>
+                <tr>
+                    <td>1188 جوهرة</td>
+                    <td class="usd-price">0.95</td>
+                    <td class="local-price">0</td>
+                    <td><button class="add-btn">إضافة</button></td>
+                </tr>
+                <tr>
+                    <td>2420 جوهرة</td>
+                    <td class="usd-price">18.1</td>
+                    <td class="local-price">0</td>
+                    <td><button class="add-btn">إضافة</button></td>
+                </tr>
+                <tr>
+                    <td>انزال جوي 1 دولار</td>
+                    <td class="usd-price">1.1</td>
+                    <td class="local-price">0</td>
+                    <td><button class="add-btn">إضافة</button></td>
                 </tr>
             </tbody>
         </table>
 
-        <button id="copyButton">نسخ المنتجات والأسعار</button>
+        <button id="copyProducts">نسخ المنتجات</button>
+
+        <h2>السلة</h2>
+        <table id="cart">
+            <thead>
+                <tr>
+                    <th>المنتج</th>
+                    <th>السعر بالعملة المحلية</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+        <p>الإجمالي: <span id="total">0</span> 🪙</p>
+        <button id="clearCart">مسح الكل</button>
+        <button id="copyCart">نسخ السلة</button>
     </div>
 
     <script>
-        const usdRateInput = document.getElementById('usdRate');
-        const usdPrices = document.querySelectorAll('.usd-price');
-        const localPrices = document.querySelectorAll('.local-price');
-        const copyButton = document.getElementById('copyButton');
+        document.addEventListener("DOMContentLoaded", function () {
+            const usdRateInput = document.getElementById("usdRate");
+            const addButtons = document.querySelectorAll(".add-btn");
+            const cartBody = document.querySelector("#cart tbody");
+            const totalSpan = document.getElementById("total");
+            const clearCartBtn = document.getElementById("clearCart");
+            const copyCartBtn = document.getElementById("copyCart");
+            const copyProductsBtn = document.getElementById("copyProducts");
 
-        function calculateLocalPrices() {
-            const usdRate = parseFloat(usdRateInput.value) || 0;
+            let totalLocal = 0;
 
-            usdPrices.forEach((usdPrice, index) => {
-                const usdPriceValue = parseFloat(usdPrice.textContent) || 0;
-                const localPrice = usdRate * usdPriceValue;
-                localPrices[index].textContent = localPrice.toFixed(2);
-            });
-        }
+            function calculateLocalPrice(usdPrice) {
+                const rate = parseFloat(usdRateInput.value);
+                return Math.round(usdPrice * rate);
+            }
 
-        usdRateInput.addEventListener('input', calculateLocalPrices);
-
-        // حساب الأسعار الأولية عند تحميل الصفحة
-        calculateLocalPrices();
-
-        // وظيفة نسخ المنتجات والأسعار
-        copyButton.addEventListener('click', () => {
-            let textToCopy = '';
-            const productRows = document.querySelectorAll('#products tbody tr');
-
-            productRows.forEach(row => {
-                const productName = row.querySelector('td:nth-child(1)').textContent;
-                const localPrice = row.querySelector('.local-price').textContent;
-                textToCopy += `${productName}: ${localPrice}\n`;
-            });
-
-            navigator.clipboard.writeText(textToCopy)
-                .then(() => {
-                    alert('تم نسخ المنتجات والأسعار إلى الحافظة!');
-                })
-                .catch(err => {
-                    console.error('فشل في نسخ النص: ', err);
-                    alert('فشل في نسخ المنتجات والأسعار.');
+            function updateLocalPrices() {
+                document.querySelectorAll("#products tbody tr").forEach(row => {
+                    const usd = parseFloat(row.querySelector(".usd-price").textContent);
+                    const localCell = row.querySelector(".local-price");
+                    localCell.textContent = calculateLocalPrice(usd);
                 });
+            }
+
+            usdRateInput.addEventListener("input", updateLocalPrices);
+            updateLocalPrices();
+
+            addButtons.forEach(button => {
+                button.addEventListener("click", function () {
+                    const row = this.closest("tr");
+                    const name = row.children[0].textContent;
+                    const usd = parseFloat(row.querySelector(".usd-price").textContent);
+                    const local = calculateLocalPrice(usd);
+
+                    const newRow = document.createElement("tr");
+                    newRow.innerHTML = `<td>${name}</td><td>${local}</td>`;
+                    cartBody.appendChild(newRow);
+
+                    totalLocal += local;
+                    totalSpan.textContent = totalLocal;
+                });
+            });
+
+            clearCartBtn.addEventListener("click", function () {
+                cartBody.innerHTML = "";
+                totalLocal = 0;
+                totalSpan.textContent = "0";
+            });
+
+            copyCartBtn.addEventListener("click", function () {
+                let text = "السلة:\n";
+                document.querySelectorAll("#cart tbody tr").forEach(row => {
+                    const cols = row.querySelectorAll("td");
+                    text += `- ${cols[0].textContent}: ${cols[1].textContent} 🪙\n`;
+                });
+                text += `\nالإجمالي: ${totalSpan.textContent} 🪙`;
+                navigator.clipboard.writeText(text).then(() => alert("تم نسخ السلة بنجاح!"));
+            });
+
+            copyProductsBtn.addEventListener("click", function () {
+                let text = "قائمة المنتجات:\n";
+                document.querySelectorAll("#products tbody tr").forEach(row => {
+                    const name = row.children[0].textContent;
+                    const local = row.querySelector(".local-price").textContent;
+                    text += `- ${name}: ${local} 🪙\n`;
+                });
+                navigator.clipboard.writeText(text).then(() => alert("تم نسخ المنتجات بنجاح!"));
+            });
         });
     </script>
 </body>
